# opensll_test

./: CMakeLists.txt  main.cpp
relise/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.sln  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  public.key
relise/app.dir/Release/: app.exe.recipe
relise/app.dir/Release/app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
relise/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
relise/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
relise/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
relise/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
